fix(photos): prevent blurring when unnecessary

--- a/src/components/Photos/Grid/PhotosGrid.scss
+++ b/src/components/Photos/Grid/PhotosGrid.scss
@@ -1,6 +1,6 @@
 .photosGrid {
     div {
-        transition: 0.1s all ease-in-out;
+        transition: 0.25s all ease-in-out;
     }
     & > .selected {
         & > div:not(.selected) {
